# vanillanets

./: LICENSE  MANIFEST.in  README.md  activation_loss.py  activations.py  binary_classification.py  data.py  layers.py  losses.py  main.py  model.py  multiclass_classification.py  pyproject.toml  regression.py  requirements.txt  setup.py  test_nn_lib.py
examples/: binary_classification.py  multiclass_classification.py  regression.py
tests/: test_vanillanets.py
vanillanets/: __init__.py  accuracy.py  activations.py  layers.py  losses.py  metrics.py  model.py  optimizers.py  softmax_loss.py
